--- a/config/database.example.yml
+++ b/config/database.example.yml
@@ -13,9 +13,9 @@ development:
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-  adapter: postgresql
-  database: citations_test
-  pool: 5
+  adapter: sqlite3
+  database: db/test.sqlite3
+  pool: 10
   timeout: 5000
 
 production:
