Attempting to fix travis failure

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ rvm:
   - 2.1.2
 before_script:
   - cp config/database.travis.yml config/database.yml
+  - mkdir tmp/cache
 script: bundle exec rake db:test:prepare spec SPEC="--tag ~js" RAILS_ENV=test
 
 
